--- a/mpd/mpd.conf
+++ b/mpd/mpd.conf
@@ -7,8 +7,8 @@ restore_paused "yes"
 max_output_buffer_size "16384"
 
 audio_output {
-        type          "alsa"
-        name          "ALSA sound card"
+        type          "pulse"
+        name          "pulse audio"
         # Optional
         #device        "iec958:CARD=Intel,DEV=0"
         #mixer_control "PCM"
