--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -183,7 +183,8 @@ label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
 [module/wlan]
 inherit = network-base
 interface-type = wireless
-label-connected = %{F#F0C674}%ifname%%{F-} %essid%
+label-connected = %{F#F0C674}%ifname%%{F-} %essid%  %downspeed%  %upspeed%
+label-disconnected=睊  
 
 [module/eth]
 inherit = network-base
